--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,26 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+Übung1/.idea/**/workspace.xml
+Übung1/.idea/**/tasks.xml
+Übung1/.idea/**/usage.statistics.xml
+Übung1/.idea/**/dictionaries
+Übung1/.idea/**/shelf
+Übung2/.idea/**/workspace.xml
+Übung2/.idea/**/tasks.xml
+Übung2/.idea/**/usage.statistics.xml
+Übung2/.idea/**/dictionaries
+Übung2/.idea/**/shelf
+Übung3/.idea/**/workspace.xml
+Übung3/.idea/**/tasks.xml
+Übung3/.idea/**/usage.statistics.xml
+Übung3/.idea/**/dictionaries
+Übung3/.idea/**/shelf
+Übung4/.idea/**/workspace.xml
+Übung4/.idea/**/tasks.xml
+Übung4/.idea/**/usage.statistics.xml
+Übung4/.idea/**/dictionaries
+Übung4/.idea/**/shelf
 
 # Generated files
 .idea/**/contentModel.xml
